refactor canvio a avif

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!-- Tarjeta de receta 1 -->
         <article class="recipe-card">
             <div class="recipe-image">
-                <img src="img/image.png" alt="Paella de mariscos auténtica con gambas, mejillones y limón">
+                <img src="img/paella.avif" alt="Paella de mariscos auténtica con gambas, mejillones y limón">
                 <button class="boton-centrado">Ver Receta</button>
             </div>
             <div class="recipe-info">
@@ -103,7 +103,7 @@
         <!-- Tarjeta de receta 2 -->
         <article class="recipe-card">
             <div class="recipe-image">
-                <img src="img/tacos-al-pastor-foto-principal.webp" alt="tacos al pastor caseros">
+                <img src="img/tacos.avif" alt="tacos al pastor caseros">
                 <button class="boton-centrado">Ver Receta</button>
             </div>
             <div class="recipe-info">
@@ -128,7 +128,7 @@
         <!-- Tarjeta de receta 3 -->
         <article class="recipe-card">
             <div class="recipe-image">
-                <img src="img/tiramisu.webp
+                <img src="img/tiramisu.avif"
                 " alt="Tiramisú clasico Italiano">
                 <button class="boton-centrado">Ver Receta</button>
             </div>
@@ -154,7 +154,7 @@
         <!-- Tarjeta de receta 4 (CENTRAL) -->
         <article class="recipe-card">
             <div class="recipe-image">
-                <img src="img/sopa-gazpacho.webp" alt="Gazpacho Andaluz Tradicional">
+                <img src="img/gazpacho.avif" alt="Gazpacho Andaluz Tradicional">
                 <button class="boton-centrado">Ver Receta</button>
             </div>
             <div class="recipe-info">
@@ -179,7 +179,7 @@
         <!-- Tarjeta de receta 5 -->
         <article class="recipe-card">
             <div class="recipe-image">
-                <img src="img/salmon-con-esparragos-verdes-en-airfryer-foto-principal.webp" alt="Salmon Grillado con Espárragos">
+                <img src="img/salmon.avif" alt="Salmon Grillado con Espárragos">
                 <button class="boton-centrado">Ver Receta</button>
             </div>
             <div class="recipe-info">
@@ -204,7 +204,7 @@
         <!-- Tarjeta de receta 6 -->
         <article class="recipe-card">
             <div class="recipe-image">
-                <img src="img/tostada de aguacate .webp" alt="tostada de aguacate y huevo poche"    >
+                <img src="img/tostada.avif" alt="tostada de aguacate y huevo poche"    >
                 <button class="boton-centrado">Ver Receta</button>
             </div>
             <div class="recipe-info">
